--- a/model.yml
+++ b/model.yml
@@ -1,5 +1,4 @@
 models:
-
   - model: User
     id: int64
     name: string
@@ -7,3 +6,4 @@ models:
   - model: Event
     id: int64
     event: string
+    created_at: time.Time
