--- a/generator/model.template
+++ b/generator/model.template
@@ -1,26 +1,27 @@
 package model
 
 import (
-. "go-orm/db"
-{{ range $i, $m := .Imports -}}
+	. "go-orm/db"
+{{ range $i, $m := .Imports }}
 	"{{$m}}"
-{{ end -}}
+{{- end }}
 )
 
 type {{.Model}}Model struct {
-datasource string
-table      string
-{{ range $i, $k := .Keys -}}
+	datasource string
+	table      string
+{{ range $i, $k := .Keys }}
 	{{$k}} {{index $.Values $i}}
-{{ end }}}
+{{- end }}
+}
 
 func (m *{{.Model}}Model) CreateTable() {
 	sql := `CREATE TABLE {{.Table}} (
 		id BIGINT AUTO_INCREMENT,
 {{ range $i, $k := .Keys }}
 		{{$k}} {{index $.Columns $i}},
-{{ end }}
-  PRIMARY KEY (id)
+{{- end }}
+		PRIMARY KEY (id)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;`
 	fmt.Println(sql)
 	fmt.Println("datasource", DBPool[m.datasource])
