--- a/generator/model.template
+++ b/generator/model.template
@@ -10,6 +10,7 @@ import (
 type {{.Model}}Model struct {
 	Datasource string
 	Table      string
+	ID         int64
 {{ range $i, $k := .Attrs }}
 	{{$k}} {{index $.Values $i}}
 {{- end }}
@@ -41,13 +42,27 @@ func (m *{{.Model}}Model) CreateTable() error {
 }
 
 func (m *{{.Model}}Model) New() *{{.Model}}Model {
-	// todo
-	return m
+	n := {{.Model}}Model{Datasource: "default", Table: "{{.Table}}"}
+	return &n
 }
 
 func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
 	sql := "SELECT * FROM {{.Table}} WHERE id = ?"
-	fmt.Println(sql)
+	db := DBPool[m.Datasource]["r"]
+	row := db.QueryRow(sql, id)
+	if err := row.Scan(&m.ID, &m.Name); err != nil {
+		fmt.Printf("Scan failed, err:%v\n", err)
+		return nil, err
+	}
+	return m, nil
+}
+
+func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
+	if m.ID > 0 {
+		fmt.Println("--Update")
+	} else {
+		fmt.Println("--Save")
+	}
 	return m, nil
 }
 
@@ -55,11 +70,6 @@ func (m *{{.Model}}Model) Where(conds map[string]interface{}) []*{{.Model}}Model
 	// todo
 	ms := []*{{.Model}}Model{}
 	return ms
-}
-
-func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
-	// todo
-	return m, nil
 }
 
 func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model, error) {
