--- a/generator/model.template
+++ b/generator/model.template
@@ -2,6 +2,7 @@ package model
 
 import (
 	. "go-orm/db"
+	"strings"
 {{ range $i, $m := .Imports }}
 	"{{$m}}"
 {{- end }}
@@ -50,6 +51,7 @@ func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
 	sql := "SELECT * FROM {{.Table}} WHERE id = ?"
 	db := DBPool[m.Datasource]["r"]
 	row := db.QueryRow(sql, id)
+	// todo
 	if err := row.Scan(&m.ID, &m.Name); err != nil {
 		return nil, err
 	}
@@ -60,6 +62,7 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 	db := DBPool[m.Datasource]["w"]
 	// Update
 	if m.ID > 0 {
+		// todo
 	// Create
 	} else {
 		sql := "{{.InsertSQL}}"
@@ -85,8 +88,33 @@ func (m *{{.Model}}Model) Where(conds map[string]interface{}) []*{{.Model}}Model
 }
 
 func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model, error) {
-	// todo
-	return m, nil
+	db := DBPool[m.Datasource]["w"]
+
+	keys := make([]string, 0)
+	values := make([]interface{}, 0)
+	for k, v := range props {
+		keys = append(keys, k)
+		values = append(values, v)
+	}
+	cstr := strings.Join(keys, ",")
+	phs := make([]string, 0)
+	for i := 0; i < len(keys); i++ {
+		phs = append(phs, "?")
+	}
+	ph := strings.Join(phs, ",")
+	sql := fmt.Sprintf("INSERT INTO {{.Table}}(%s) VALUES(%s)", cstr, ph)
+
+	result, err := db.Exec(sql, values...)
+	if err != nil {
+		fmt.Printf("Insert data failed, err:%v", err)
+		return nil, err
+	}
+	lastInsertID, err := result.LastInsertId() //获取插入数据的自增ID
+	if err != nil {
+		fmt.Printf("Get insert id failed, err:%v", err)
+		return nil, err
+	}
+	return m.Find(lastInsertID)
 }
 
 func (m *{{.Model}}Model) Delete() error {
