--- a/generator/model.template
+++ b/generator/model.template
@@ -4,6 +4,7 @@ import (
 	. "go-orm/db"
 	. "go-orm/lib"
 	"strings"
+	"time"
 {{ range $i, $m := .Imports }}
 	"{{$m}}"
 {{- end }}
@@ -20,6 +21,9 @@ type {{.Model}}Model struct {
 
 func (m *{{.Model}}Model) Exec(sql string) error {
 	db := DBPool[m.Datasource]["w"]
+	if SqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+	}
 	if _, err := db.Exec(sql); err != nil {
 		fmt.Println("Execute sql failed:", err)
 		return err
@@ -36,6 +40,9 @@ func (m *{{.Model}}Model) CreateTable() error {
 		PRIMARY KEY (id)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;`
 	db := DBPool[m.Datasource]["w"]
+	if SqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+	}
 	if _, err := db.Exec(sql); err != nil {
 		fmt.Println("Create table failed:", err)
 		return err
@@ -75,6 +82,9 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 	// Create
 	} else {
 		sql := "{{.InsertSQL}}"
+		if SqlLog {
+			fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, {{.InsertArgs}})
+		}
 		result, err := db.Exec(sql, {{.InsertArgs}})
 		if err != nil {
 			fmt.Printf("Insert data failed, err:%v", err)
@@ -113,6 +123,9 @@ func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model
 	ph := strings.Join(phs, ",")
 	sql := fmt.Sprintf("INSERT INTO {{.Table}}(%s) VALUES(%s)", cstr, ph)
 
+	if SqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, values)
+	}
 	result, err := db.Exec(sql, values...)
 	if err != nil {
 		fmt.Printf("Insert data failed, err:%v", err)
@@ -151,6 +164,9 @@ func (m *{{.Model}}Model) Update(props map[string]interface{}, conds map[string]
 		cvs = append(cvs, v)
 	}
 	sql := fmt.Sprintf("UPDATE {{.Table}} SET %s WHERE %s", strings.Join(setstr, ", "), strings.Join(wherestr, " AND "))
+	if SqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
+	}
 	_, err := db.Exec(sql, cvs...)
 	if err != nil {
 		fmt.Printf("Update failed, err:%v\n", err)
