--- a/datasource.yml
+++ b/datasource.yml
@@ -6,3 +6,6 @@ datasources:
   - name: ds_2
     write: root:root@tcp(127.0.0.1:3306)/my_db_0
     read: root:root@tcp(127.0.0.1:3306)/my_db_0
+
+sql_log: true
+slow_sql_log: false
