--- a/generator/model.template
+++ b/generator/model.template
@@ -58,6 +58,9 @@ func (m *{{.Model}}Model) New() *{{.Model}}Model {
 func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
 	sql := "SELECT * FROM {{.Table}} WHERE id = ?"
 	db := DBPool[m.Datasource]["r"]
+	if SqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
+	}
 	row := db.QueryRow(sql, id)
 	// todo
 	if err := row.Scan(&m.ID, &m.Name); err != nil {
