--- a/generator/model.template
+++ b/generator/model.template
@@ -1,6 +1,7 @@
 package model
 
 import (
+	. "database/sql"
 	. "go-orm/db"
 	. "go-orm/lib"
 	"strings"
@@ -13,10 +14,46 @@ import (
 type {{.Model}}Model struct {
 	Datasource string
 	Table      string
+	Trx        *Tx
 	ID         int64
 {{ range $i, $k := .Attrs }}
 	{{$k}} {{index $.Values $i}}
 {{- end }}
+}
+
+func (m *{{.Model}}Model) Begin() (*Tx, error) {
+	db := DBPool[m.Datasource]["w"]
+	sql := "BEGIN"
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+	}
+	tx, err := db.Begin()
+	m.Trx = tx
+	return tx, err
+}
+
+func (m *{{.Model}}Model) Commit() error {
+	if m.Trx != nil {
+		sql := "COMMIT"
+		if GoOrmSqlLog {
+			fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+		}
+		return m.Trx.Commit()
+	}
+	m.Trx = nil
+	return nil
+}
+
+func (m *{{.Model}}Model) Rollback() error {
+	if m.Trx != nil {
+		sql := "ROLLBACK"
+		if GoOrmSqlLog {
+			fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+		}
+		return m.Trx.Rollback()
+	}
+	m.Trx = nil
+	return nil
 }
 
 func (m *{{.Model}}Model) Exec(sql string) error {
@@ -129,7 +166,13 @@ func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, values)
 	}
-	result, err := db.Exec(sql, values...)
+	var result Result
+	var err error
+	if m.Trx != nil {
+		result, err = m.Trx.Exec(sql, values...)
+	} else {
+		result, err = db.Exec(sql, values...)
+	}
 	if err != nil {
 		fmt.Printf("Insert data failed, err:%v", err)
 		return nil, err
