--- a/generator/model.template
+++ b/generator/model.template
@@ -191,8 +191,22 @@ func (m *{{.Model}}Model) Delete() error {
 }
 
 func (m *{{.Model}}Model) Destroy(id int64) error {
-	// sql := "DELETE FROM {{.Table}} WHERE id = ?"
-	// todo
+	db := DBPool[m.Datasource]["w"]
+	sql := "DELETE FROM {{.Table}} WHERE id = ?"
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
+	}
+	var err error
+	if m.Trx != nil {
+		_, err = m.Trx.Exec(sql, id)
+	} else {
+		_, err = db.Exec(sql, id)
+	}
+	if err != nil {
+		fmt.Printf("Delete data failed, err:%v", err)
+		return err
+	}
+	m.ID = 0
 	return nil
 }
 
