--- a/generator/model.template
+++ b/generator/model.template
@@ -127,12 +127,12 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 		}
 		result, err := db.Exec(sql, {{.InsertArgs}})
 		if err != nil {
-			fmt.Printf("Insert data failed, err:%v", err)
+			fmt.Printf("Insert data failed, err:%v\n", err)
 			return nil, err
 		}
 		lastInsertID, err := result.LastInsertId() //获取插入数据的自增ID
 		if err != nil {
-			fmt.Printf("Get insert id failed, err:%v", err)
+			fmt.Printf("Get insert id failed, err:%v\n", err)
 			return nil, err
 		}
 		m.ID = lastInsertID
@@ -174,12 +174,12 @@ func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model
 		result, err = db.Exec(sql, values...)
 	}
 	if err != nil {
-		fmt.Printf("Insert data failed, err:%v", err)
+		fmt.Printf("Insert data failed, err:%v\n", err)
 		return nil, err
 	}
 	lastInsertID, err := result.LastInsertId() //获取插入数据的自增ID
 	if err != nil {
-		fmt.Printf("Get insert id failed, err:%v", err)
+		fmt.Printf("Get insert id failed, err:%v\n", err)
 		return nil, err
 	}
 	return m.Find(lastInsertID)
@@ -202,7 +202,7 @@ func (m *{{.Model}}Model) Destroy(id int64) error {
 		_, err = db.Exec(sql, id)
 	}
 	if err != nil {
-		fmt.Printf("Delete data failed, err:%v", err)
+		fmt.Printf("Delete data failed, err:%v\n", err)
 		return err
 	}
 	m.ID = 0
@@ -226,9 +226,14 @@ func (m *{{.Model}}Model) Update(props map[string]interface{}, conds map[string]
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
 	}
-	_, err := db.Exec(sql, cvs...)
+	var err error
+	if m.Trx != nil {
+		_, err = m.Trx.Exec(sql, cvs...)
+	} else {
+		_, err = db.Exec(sql, cvs...)
+	}
 	if err != nil {
-		fmt.Printf("Update failed, err:%v\n", err)
+		fmt.Printf("Update data failed, err:%v\n", err)
 		return err
 	}
 	return nil
