--- a/generator/model.template
+++ b/generator/model.template
@@ -99,8 +99,7 @@ func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
 	}
 	row := db.QueryRow(sql, id)
-	// todo
-	if err := row.Scan(&m.ID, &m.Name); err != nil {
+	if err := row.Scan({{.ScanStr}}); err != nil {
 		return nil, err
 	}
 	return m, nil
