--- a/datasource.yml
+++ b/datasource.yml
@@ -1,11 +1,11 @@
 datasources:
   - name: default
-    write: root:root@tcp(127.0.0.1:3306)/my_db_0
-    read: root:root@tcp(127.0.0.1:3306)/my_db_0
+    write: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
+    read: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
 
   - name: ds_2
-    write: root:root@tcp(127.0.0.1:3306)/my_db_0
-    read: root:root@tcp(127.0.0.1:3306)/my_db_0
+    write: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
+    read: root:root@tcp(127.0.0.1:3306)/my_db_0?charset=utf8mb4&parseTime=True
 
 sql_log: true
 slow_sql_log: false
