--- a/generator/model.template
+++ b/generator/model.template
@@ -69,6 +69,7 @@ func (m *{{.Model}}Model) Exec(sql string) error {
 }
 
 func (m *{{.Model}}Model) CreateTable() error {
+	db := DBPool[m.Datasource]["w"]
 	sql := `CREATE TABLE {{.Table}} (
 		id BIGINT AUTO_INCREMENT,
 {{ range $i, $k := .Keys }}
@@ -76,7 +77,6 @@ func (m *{{.Model}}Model) CreateTable() error {
 {{- end }}
 		PRIMARY KEY (id)
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;`
-	db := DBPool[m.Datasource]["w"]
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
 	}
@@ -93,8 +93,8 @@ func (m *{{.Model}}Model) New() *{{.Model}}Model {
 }
 
 func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
-	sql := "SELECT * FROM {{.Table}} WHERE id = ?"
 	db := DBPool[m.Datasource]["r"]
+	sql := "SELECT * FROM {{.Table}} WHERE id = ?"
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
 	}
@@ -113,7 +113,7 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 		conds := map[string]interface{}{"id": m.ID}
 		uprops := make(map[string]interface{})
 		for k, v := range props {
-			if k != "Datasource" && k != "Table" && k != "ID" {
+			if k != "Datasource" && k != "Table" && k != "Trx" && k != "ID" {
 				uprops[Underscore(k)] = v
 			}
 		}
@@ -139,15 +139,42 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 	return m, nil
 }
 
-func (m *{{.Model}}Model) Where(conds map[string]interface{}) []*{{.Model}}Model {
-	// todo
-	ms := []*{{.Model}}Model{}
-	return ms
+func (m *{{.Model}}Model) Where(conds map[string]interface{}) ([]*{{.Model}}Model, error) {
+	db := DBPool[m.Datasource]["r"]
+	wherestr := make([]string, 0)
+	cvs := make([]interface{}, 0)
+	for k, v := range conds {
+		wherestr = append(wherestr, k + "=?")
+		cvs = append(cvs, v)
+	}
+	sql := fmt.Sprintf("SELECT * FROM {{.Table}} WHERE %s", strings.Join(wherestr, " AND "))
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
+	}
+	rows, err := db.Query(sql, cvs...)
+	defer func() {
+		if rows != nil {
+			rows.Close() //关闭掉未scan的sql连接
+		}
+	}()
+	if err != nil {
+		fmt.Printf("Query data failed, err:%v\n", err)
+		return nil, err
+	}
+	ms := make([]*{{.Model}}Model, 0)
+	for rows.Next() {
+		m = new({{.Model}}Model)
+		err = rows.Scan({{.ScanStr}}) //不scan会导致连接不释放
+		if err != nil {
+			return nil, err
+		}
+		ms = append(ms, m)
+	}
+	return ms, nil
 }
 
 func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model, error) {
 	db := DBPool[m.Datasource]["w"]
-
 	keys := make([]string, 0)
 	values := make([]interface{}, 0)
 	for k, v := range props {
