--- a/generator/model.template
+++ b/generator/model.template
@@ -12,6 +12,10 @@ import (
 )
 
 type {{.Model}}Model struct {
+	OdB        string
+	Lmt        int
+	Ofs        int
+	
 	Datasource string
 	Table      string
 	Trx        *Tx
@@ -113,7 +117,7 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 		conds := map[string]interface{}{"id": m.ID}
 		uprops := make(map[string]interface{})
 		for k, v := range props {
-			if k != "Datasource" && k != "Table" && k != "Trx" && k != "ID" {
+			if k != "OdB" && k != "Lmt" && k != "Ofs" && k != "Datasource" && k != "Table" && k != "Trx" && k != "ID" {
 				uprops[Underscore(k)] = v
 			}
 		}
@@ -265,38 +269,95 @@ func (m *{{.Model}}Model) Update(props map[string]interface{}, conds map[string]
 	return nil
 }
 
-func (m *{{.Model}}Model) CountAll() int64 {
-	// todo
-	return 0
+func (m *{{.Model}}Model) CountAll() (int, error) {
+	db := DBPool[m.Datasource]["r"]
+	sql := "SELECT count(1) FROM {{.Table}}"
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+	}
+	row := db.QueryRow(sql)
+	var c int
+	if err := row.Scan(&c); err != nil {
+		return 0, err
+	}
+	return c, nil
 }
 
-func (m *{{.Model}}Model) Count(conds map[string]interface{}) int64 {
-	// todo
-	return 0
+func (m *{{.Model}}Model) Count(conds map[string]interface{}) (int, error) {
+	db := DBPool[m.Datasource]["r"]
+	wherestr := make([]string, 0)
+	cvs := make([]interface{}, 0)
+	for k, v := range conds {
+		wherestr = append(wherestr, k + "=?")
+		cvs = append(cvs, v)
+	}
+	sql := fmt.Sprintf("SELECT count(1) FROM {{.Table}} WHERE %s", strings.Join(wherestr, " AND "))
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
+	}
+	row := db.QueryRow(sql, cvs...)
+	var c int
+	if err := row.Scan(&c); err != nil {
+		return 0, err
+	}
+	return c, nil
 }
 
 func (m *{{.Model}}Model) All() ([]*{{.Model}}Model, error) {
-	// todo
-	return nil, nil
+	db := DBPool[m.Datasource]["r"]
+	sql := "SELECT * FROM {{.Table}}"
+	if m.OdB != "" {
+		sql = sql + " ORDER BY " + m.OdB
+	}
+	if m.Lmt > 0 {
+		sql = sql + fmt.Sprintf(" LIMIT %d", m.Lmt)
+	}
+	if m.Ofs > 0 {
+		sql = sql + fmt.Sprintf(" OFFSET %d", m.Ofs)
+	}
+	if GoOrmSqlLog {
+		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
+	}
+	rows, err := db.Query(sql)
+	defer func() {
+		if rows != nil {
+			rows.Close() //关闭掉未scan的sql连接
+		}
+	}()
+	if err != nil {
+		fmt.Printf("Query data failed, err:%v\n", err)
+		return nil, err
+	}
+	ms := make([]*{{.Model}}Model, 0)
+	for rows.Next() {
+		m = new({{.Model}}Model)
+		err = rows.Scan({{.ScanStr}}) //不scan会导致连接不释放
+		if err != nil {
+			return nil, err
+		}
+		ms = append(ms, m)
+	}
+	return ms, nil
 }
 
 func (m *{{.Model}}Model) OrderBy(o string) *{{.Model}}Model {
-	// todo
-	return nil
+	m.OdB = o
+	return m
 }
 
-func (m *{{.Model}}Model) Offset(o int64) *{{.Model}}Model {
-	// todo
-	return nil
+func (m *{{.Model}}Model) Offset(o int) *{{.Model}}Model {
+	m.Ofs = o
+	return m
 }
 
-func (m *{{.Model}}Model) Limit(l int64) *{{.Model}}Model {
-	// todo
-	return nil
+func (m *{{.Model}}Model) Limit(l int) *{{.Model}}Model {
+	m.Lmt = l
+	return m
 }
 
-func (m *{{.Model}}Model) Page(page int64, size int64) ([]*{{.Model}}Model, error) {
-	// todo
+func (m *{{.Model}}Model) Page(page int, size int) ([]*{{.Model}}Model, error) {
+	m.Ofs = (page - 1)*size
+	m.Lmt = size
 	return nil, nil
 }
 
