--- a/generator/model.template
+++ b/generator/model.template
@@ -65,9 +65,14 @@ func (m *{{.Model}}Model) Exec(sql string) error {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
 	}
+	st := time.Now().UnixNano() / 1e6
 	if _, err := db.Exec(sql); err != nil {
 		fmt.Println("Execute sql failed:", err)
 		return err
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return nil
 }
@@ -84,9 +89,14 @@ func (m *{{.Model}}Model) CreateTable() error {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
 	}
+	st := time.Now().UnixNano() / 1e6
 	if _, err := db.Exec(sql); err != nil {
 		fmt.Println("Create table failed:", err)
 		return err
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return nil
 }
@@ -102,9 +112,14 @@ func (m *{{.Model}}Model) Find(id int64) (*{{.Model}}Model, error) {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
 	}
+	st := time.Now().UnixNano() / 1e6
 	row := db.QueryRow(sql, id)
 	if err := row.Scan({{.ScanStr}}); err != nil {
 		return nil, err
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return m, nil
 }
@@ -128,6 +143,7 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 		if GoOrmSqlLog {
 			fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, {{.InsertArgs}})
 		}
+		st := time.Now().UnixNano() / 1e6
 		result, err := db.Exec(sql, {{.InsertArgs}})
 		if err != nil {
 			fmt.Printf("Insert data failed, err:%v\n", err)
@@ -139,6 +155,10 @@ func (m *{{.Model}}Model) Save() (*{{.Model}}Model, error) {
 			return nil, err
 		}
 		m.ID = lastInsertID
+		e := time.Now().UnixNano()/1e6 - st
+		if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+			fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
+		}
 	}
 	return m, nil
 }
@@ -164,6 +184,7 @@ func (m *{{.Model}}Model) Where(conds map[string]interface{}) ([]*{{.Model}}Mode
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
 	}
+	st := time.Now().UnixNano() / 1e6
 	rows, err := db.Query(sql, cvs...)
 	defer func() {
 		if rows != nil {
@@ -182,6 +203,10 @@ func (m *{{.Model}}Model) Where(conds map[string]interface{}) ([]*{{.Model}}Mode
 			return nil, err
 		}
 		ms = append(ms, m)
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return ms, nil
 }
@@ -205,6 +230,7 @@ func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, values)
 	}
+	st := time.Now().UnixNano() / 1e6
 	var result Result
 	var err error
 	if m.Trx != nil {
@@ -221,6 +247,10 @@ func (m *{{.Model}}Model) Create(props map[string]interface{}) (*{{.Model}}Model
 		fmt.Printf("Get insert id failed, err:%v\n", err)
 		return nil, err
 	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
+	}
 	return m.Find(lastInsertID)
 }
 
@@ -234,6 +264,7 @@ func (m *{{.Model}}Model) Destroy(id int64) error {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, id)
 	}
+	st := time.Now().UnixNano() / 1e6
 	var err error
 	if m.Trx != nil {
 		_, err = m.Trx.Exec(sql, id)
@@ -245,6 +276,10 @@ func (m *{{.Model}}Model) Destroy(id int64) error {
 		return err
 	}
 	m.ID = 0
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
+	}
 	return nil
 }
 
@@ -265,6 +300,7 @@ func (m *{{.Model}}Model) Update(props map[string]interface{}, conds map[string]
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
 	}
+	st := time.Now().UnixNano() / 1e6
 	var err error
 	if m.Trx != nil {
 		_, err = m.Trx.Exec(sql, cvs...)
@@ -275,6 +311,10 @@ func (m *{{.Model}}Model) Update(props map[string]interface{}, conds map[string]
 		fmt.Printf("Update data failed, err:%v\n", err)
 		return err
 	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
+	}
 	return nil
 }
 
@@ -284,10 +324,15 @@ func (m *{{.Model}}Model) CountAll() (int, error) {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
 	}
+	st := time.Now().UnixNano() / 1e6
 	row := db.QueryRow(sql)
 	var c int
 	if err := row.Scan(&c); err != nil {
 		return 0, err
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return c, nil
 }
@@ -304,10 +349,15 @@ func (m *{{.Model}}Model) Count(conds map[string]interface{}) (int, error) {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql, cvs)
 	}
+	st := time.Now().UnixNano() / 1e6
 	row := db.QueryRow(sql, cvs...)
 	var c int
 	if err := row.Scan(&c); err != nil {
 		return 0, err
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return c, nil
 }
@@ -327,6 +377,7 @@ func (m *{{.Model}}Model) All() ([]*{{.Model}}Model, error) {
 	if GoOrmSqlLog {
 		fmt.Println("["+time.Now().Format("2006-01-02 15:04:05")+"][SQL]", sql)
 	}
+	st := time.Now().UnixNano() / 1e6
 	rows, err := db.Query(sql)
 	defer func() {
 		if rows != nil {
@@ -345,6 +396,10 @@ func (m *{{.Model}}Model) All() ([]*{{.Model}}Model, error) {
 			return nil, err
 		}
 		ms = append(ms, m)
+	}
+	e := time.Now().UnixNano()/1e6 - st
+	if GoOrmSlowSqlLog > 0 && int(e) >= GoOrmSlowSqlLog {
+		fmt.Printf("["+time.Now().Format("2006-01-02 15:04:05")+"][SlowSQL][%s][%dms]\n", sql, e)
 	}
 	return ms, nil
 }
